defconfig: enable vdso32 and disable SHADOW_CALL_STACK (SCS)
Signed-off-by: shandongtlb <40312509+shandongtlb@users.noreply.github.com>

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -284,6 +284,9 @@ CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
 CONFIG_LTO_NONE=y
 # CONFIG_LTO_CLANG is not set
+CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
+CONFIG_ROP_PROTECTION_NONE=y
+# CONFIG_SHADOW_CALL_STACK is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
@@ -655,6 +658,9 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
+CONFIG_KUSER_HELPERS=y
+CONFIG_COMPAT_VDSO=y
+CONFIG_CROSS_COMPILE_ARM32=""
 
 #
 # Power management options
