--- a/drivers/net/wireless/realtek/rtl8188eus/Makefile
+++ b/drivers/net/wireless/realtek/rtl8188eus/Makefile
@@ -5,6 +5,9 @@ EXTRA_CFLAGS += -Wno-unused-variable
 EXTRA_CFLAGS += -Wno-unused-value
 EXTRA_CFLAGS += -Wno-unused-label
 EXTRA_CFLAGS += -Wno-unused-parameter
+EXTRA_CFLAGS += -Wno-parentheses-equality
+EXTRA_CFLAGS += -Wno-constant-conversion
+EXTRA_CFLAGS += -Wno-enum-conversion
 EXTRA_CFLAGS += -Wno-unused-function
 EXTRA_CFLAGS += -Wno-unused
 EXTRA_CFLAGS += -Wno-vla
