defconfig: enable VCM_AK7374 cam

--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -3105,6 +3105,8 @@ CONFIG_SPECTRA_CAMERA=y
 # CONFIG_MSM_AIS is not set
 # CONFIG_MSM_CAMERA is not set
 # CONFIG_MSMB_CAMERA is not set
+# CONFIG_USE_ROHM_BU64753 is not set
+CONFIG_VCM_AK7374=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
