--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -102,7 +102,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_SCHED_WALT=y
+# CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
@@ -137,8 +137,8 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 #
 # FAIR Scheuler tunables
 #
-CONFIG_PELT_UTIL_HALFLIFE_32=y
-# CONFIG_PELT_UTIL_HALFLIFE_16 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_32 is not set
+CONFIG_PELT_UTIL_HALFLIFE_16=y
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_CGROUPS=y
@@ -173,6 +173,7 @@ CONFIG_NAMESPACES=y
 CONFIG_NET_NS=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
+CONFIG_STUNE_ASSIST=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
@@ -507,6 +508,9 @@ CONFIG_ARM64_VA_BITS=39
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_NR_CPUS=8
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=112
+CONFIG_PRIME_CPU_MASK=128
 CONFIG_HOTPLUG_CPU=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
@@ -517,11 +521,11 @@ CONFIG_HOLES_IN_ZONE=y
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ_100=y
+# CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
-# CONFIG_HZ_300 is not set
+CONFIG_HZ_300=y
 # CONFIG_HZ_1000 is not set
-CONFIG_HZ=100
+CONFIG_HZ=300
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -713,9 +717,19 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_SCHEDUTIL_UP_RATE_LIMIT=500
+CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=2000
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_LITTLE_MIN=576000
+CONFIG_CPU_FREQ_DEFAULT_BIG_MIN=714000
+CONFIG_CPU_FREQ_DEFAULT_PRIME_MIN=825000
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_WAKE_BOOST_DURATION_MS=1000
+CONFIG_MAX_BOOST_FREQ_LP=0
+CONFIG_MAX_BOOST_FREQ_PERF=0
+CONFIG_MAX_BOOST_FREQ_PERFP=0
 
 #
 # CPU frequency scaling drivers
@@ -4456,6 +4470,7 @@ CONFIG_IPA_UT=y
 # CONFIG_MSM_11AD is not set
 CONFIG_SEEMP_CORE=y
 # CONFIG_IPA3_REGDUMP is not set
+# CONFIG_QCOM_ETHERNET_UTIL is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
@@ -4773,6 +4788,10 @@ CONFIG_DEVFREQ_SIMPLE_DEV=y
 CONFIG_QCOM_DEVFREQ_DEVBW=y
 # CONFIG_DEVFREQ_SPDM is not set
 CONFIG_DEVFREQ_GOV_CDSPL3=y
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=4577
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
 
@@ -5949,11 +5968,11 @@ CONFIG_SBITMAP=y
 #
 # Xiaomi configuration options
 #
-# CONFIG_MACH_XIAOMI is not set
-# CONFIG_MACH_XIAOMI_SM8150 is not set
+CONFIG_MACH_XIAOMI=y
+CONFIG_MACH_XIAOMI_SM8150=y
 
 #
 # Xiaomi board selection
 #
-# CONFIG_MACH_XIAOMI_CEPHEUS is not set
+CONFIG_MACH_XIAOMI_CEPHEUS=y
 # CONFIG_MACH_XIAOMI_RAPHAEL is not set
