--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -173,6 +173,7 @@ CONFIG_NAMESPACES=y
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 CONFIG_SCHED_TUNE=y
+CONFIG_STUNE_ASSIST=y
 CONFIG_CPUSETS_ASSIST=y
 CONFIG_CPUSET_AUDIO_APP="0-1"
 CONFIG_CPUSET_BG="0-1"
@@ -181,7 +182,6 @@ CONFIG_CPUSET_FG="0-3,5-6"
 CONFIG_CPUSET_RESTRICTED="0-3"
 CONFIG_CPUSET_SYSTEM_BG="0-3"
 CONFIG_CPUSET_TOP_APP="0-7"
-CONFIG_STUNE_ASSIST=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
@@ -740,7 +740,7 @@ CONFIG_SCHEDUTIL_UP_RATE_LIMIT=500
 CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=2000
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_LITTLE_MIN=576000
-CONFIG_CPU_FREQ_DEFAULT_BIG_MIN=714000
+CONFIG_CPU_FREQ_DEFAULT_BIG_MIN=71400
 CONFIG_CPU_FREQ_DEFAULT_PRIME_MIN=825000
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_WAKE_BOOST_DURATION_MS=1000
@@ -780,6 +780,8 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
@@ -2825,6 +2827,7 @@ CONFIG_QTI_BCL_PMIC5=y
 CONFIG_QTI_BCL_SOC_DRIVER=y
 CONFIG_QTI_ADC_TM=y
 # CONFIG_QTI_CX_IPEAK_COOLING_DEVICE is not set
+# CONFIG_MSM_THERMAL_SIMPLE is not set
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
@@ -6057,4 +6060,3 @@ CONFIG_MACH_XIAOMI_SM8150=y
 #
 CONFIG_MACH_XIAOMI_CEPHEUS=y
 # CONFIG_MACH_XIAOMI_RAPHAEL is not set
-CONFIG_DYNAMIC_FSYNC=y
