--- a/arch/arm64/configs/cepheus_defconfig
+++ b/arch/arm64/configs/cepheus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.193 Kernel Configuration
+# Linux/arm64 4.14 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -182,6 +182,7 @@ CONFIG_CPUSET_FG="0-3,5-6"
 CONFIG_CPUSET_RESTRICTED="0-3"
 CONFIG_CPUSET_SYSTEM_BG="0-3"
 CONFIG_CPUSET_TOP_APP="0-7"
+CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
